Ran GenCode explore notebook using ORF_counter.

--- a/Notebooks/GenCode_Explore_101.ipynb
+++ b/Notebooks/GenCode_Explore_101.ipynb
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-05-28 16:22:05 EDT\n"
+      "2021-05-30 16:33:47 EDT\n"
      ]
     }
    ],
@@ -151,16 +151,18 @@
    "source": [
     "def get_the_facts(seqs,verbose=False):\n",
     "    oc = ORF_counter()\n",
-    "    facts = rd.get_three_lengths(seqs)\n",
-    "    facts_ary = np.asarray(facts) \n",
-    "    mean_5utr, mean_orf, mean_3utr = np.mean(facts_ary,axis=0)\n",
-    "    std_5utr, std_orf, std_3utr = np.std(facts_ary,axis=0)\n",
+    "    count = len(seqs)\n",
+    "    max_orf_lengths=np.zeros(count)\n",
+    "    for s in range(0,count):\n",
+    "        seq = seqs[s]\n",
+    "        oc.set_sequence(seq)\n",
+    "        max_orf = oc.get_max_orf_len()\n",
+    "        max_orf_lengths[s] = max_orf\n",
+    "    mean_max_orf = np.mean(max_orf_lengths,axis=0)\n",
+    "    std_max_orf = np.std(max_orf_lengths,axis=0)\n",
     "    if verbose:\n",
-    "        print(\"Facts array:\",facts_ary.shape)\n",
-    "        print(\"mean 5' UTR length:\",int(mean_5utr),\"+/-\",int(std_5utr))\n",
-    "        print(\"mean    ORF length:\",int(mean_orf), \"+/-\",int(std_orf))\n",
-    "        print(\"mean 3' UTR length:\",int(mean_3utr),\"+/-\",int(std_3utr))\n",
-    "    return mean_5utr, mean_orf, mean_3utr"
+    "        print(\"mean longest ORF length:\",int(mean_max_orf),\"+/-\",int(std_max_orf))\n",
+    "    return mean_max_orf"
    ]
   },
   {
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +350,7 @@
        "4   GGCGGCGGAGTCTCCCAAGTCCCCGCCGGGCGGGCGCGCGCCAGTG...    3468  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,10 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Facts array: (15, 3)\n",
-      "mean 5' UTR length: 132 +/- 199\n",
-      "mean    ORF length: 1533 +/- 710\n",
-      "mean 3' UTR length: 252 +/- 394\n"
+      "mean longest ORF length: 1533 +/- 710\n"
      ]
     }
    ],
@@ -401,11 +400,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-05-28 16:22:16 EDT\n",
+      "2021-05-30 16:33:48 EDT\n",
       "PC seqs loaded: 106143\n",
-      "2021-05-28 16:22:21 EDT\n",
+      "2021-05-30 16:33:52 EDT\n",
       "NC seqs loaded: 48752\n",
-      "2021-05-28 16:22:23 EDT\n"
+      "2021-05-30 16:33:54 EDT\n"
      ]
     }
    ],
@@ -423,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -444,9 +443,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-05-30 16:33:54 EDT\n",
+      "Protein Coding set:\n",
+      "mean longest ORF length: 1136 +/- 1556\n",
+      "2021-05-30 16:35:08 EDT\n",
+      "Non Coding set:\n",
+      "mean longest ORF length: 211 +/- 135\n",
+      "2021-05-30 16:35:28 EDT\n"
+     ]
+    }
+   ],
    "source": [
     "# Warning: each get_the_facts() can take up to 5 minutes.\n",
     "# It is basically a 3-deep nested loop: for each seq, for each start, for each stop.\n",
@@ -459,7 +472,7 @@
     "    print(\"Non Coding set:\")\n",
     "    nc_means = get_the_facts( ncdf['sequence'].tolist() ,True)\n",
     "    show_time()\n",
-    "#big_summary()"
+    "big_summary()"
    ]
   },
   {
@@ -493,17 +506,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Facts array: (25607, 3)\n",
-      "mean 5' UTR length: 225 +/- 165\n",
-      "mean    ORF length: 160 +/- 85\n",
-      "mean 3' UTR length: 230 +/- 167\n"
+      "mean longest ORF length: 160 +/- 85\n"
      ]
     }
    ],
@@ -516,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -524,116 +534,50 @@
      "output_type": "stream",
      "text": [
       "--  NC RNA lengths 32 to 441\n",
-      "Facts array: (4875, 3)\n",
-      "mean 5' UTR length: 117 +/- 82\n",
-      "mean    ORF length: 111 +/- 68\n",
-      "mean 3' UTR length: 118 +/- 81\n",
+      "mean longest ORF length: 111 +/- 68\n",
       "--  NC RNA lengths 441 to 548\n",
-      "Facts array: (4875, 3)\n",
-      "mean 5' UTR length: 175 +/- 111\n",
-      "mean    ORF length: 146 +/- 73\n",
-      "mean 3' UTR length: 174 +/- 110\n",
+      "mean longest ORF length: 146 +/- 73\n",
       "--  NC RNA lengths 548 to 641\n",
-      "Facts array: (4875, 3)\n",
-      "mean 5' UTR length: 210 +/- 129\n",
-      "mean    ORF length: 159 +/- 76\n",
-      "mean 3' UTR length: 216 +/- 129\n",
+      "mean longest ORF length: 159 +/- 76\n",
       "--  NC RNA lengths 641 to 777\n",
-      "Facts array: (4875, 3)\n",
-      "mean 5' UTR length: 258 +/- 159\n",
-      "mean    ORF length: 180 +/- 86\n",
-      "mean 3' UTR length: 269 +/- 161\n",
+      "mean longest ORF length: 180 +/- 86\n",
       "--  NC RNA lengths 777 to 947\n",
-      "Facts array: (4875, 3)\n",
-      "mean 5' UTR length: 327 +/- 196\n",
-      "mean    ORF length: 193 +/- 91\n",
-      "mean 3' UTR length: 334 +/- 197\n",
+      "mean longest ORF length: 193 +/- 91\n",
       "--  NC RNA lengths 947 to 1180\n",
-      "Facts array: (4875, 3)\n",
-      "mean 5' UTR length: 410 +/- 250\n",
-      "mean    ORF length: 212 +/- 99\n",
-      "mean 3' UTR length: 436 +/- 250\n",
+      "mean longest ORF length: 212 +/- 99\n",
       "--  NC RNA lengths 1180 to 1456\n",
-      "Facts array: (4875, 3)\n",
-      "mean 5' UTR length: 514 +/- 318\n",
-      "mean    ORF length: 227 +/- 101\n",
-      "mean 3' UTR length: 567 +/- 316\n",
+      "mean longest ORF length: 227 +/- 101\n",
       "--  NC RNA lengths 1456 to 1866\n",
-      "Facts array: (4875, 3)\n",
-      "mean 5' UTR length: 634 +/- 416\n",
-      "mean    ORF length: 250 +/- 118\n",
-      "mean 3' UTR length: 757 +/- 416\n",
+      "mean longest ORF length: 250 +/- 118\n",
       "--  NC RNA lengths 1866 to 2622\n",
-      "Facts array: (4875, 3)\n",
-      "mean 5' UTR length: 825 +/- 585\n",
-      "mean    ORF length: 284 +/- 135\n",
-      "mean 3' UTR length: 1081 +/- 585\n",
+      "mean longest ORF length: 284 +/- 135\n",
       "--  NC RNA lengths 2622 to 91667\n",
-      "Facts array: (4875, 3)\n",
-      "mean 5' UTR length: 1574 +/- 1660\n",
-      "mean    ORF length: 345 +/- 237\n",
-      "mean 3' UTR length: 2057 +/- 1743\n",
+      "mean longest ORF length: 345 +/- 237\n",
       "--  NC RNA lengths 205012 to 347561\n",
-      "Facts array: (2, 3)\n",
-      "mean 5' UTR length: 163101 +/- 69763\n",
-      "mean    ORF length: 528 +/- 15\n",
-      "mean 3' UTR length: 112657 +/- 1496\n",
+      "mean longest ORF length: 528 +/- 15\n",
       "\n",
       "--  PC RNA lengths 8 to 551\n",
-      "Facts array: (10614, 3)\n",
-      "mean 5' UTR length: 135 +/- 109\n",
-      "mean    ORF length: 150 +/- 108\n",
-      "mean 3' UTR length: 156 +/- 109\n",
+      "mean longest ORF length: 150 +/- 108\n",
       "--  PC RNA lengths 551 to 635\n",
-      "Facts array: (10614, 3)\n",
-      "mean 5' UTR length: 183 +/- 134\n",
-      "mean    ORF length: 178 +/- 120\n",
-      "mean 3' UTR length: 220 +/- 130\n",
+      "mean longest ORF length: 178 +/- 120\n",
       "--  PC RNA lengths 635 to 826\n",
-      "Facts array: (10614, 3)\n",
-      "mean 5' UTR length: 201 +/- 164\n",
-      "mean    ORF length: 272 +/- 175\n",
-      "mean 3' UTR length: 255 +/- 163\n",
+      "mean longest ORF length: 272 +/- 175\n",
       "--  PC RNA lengths 826 to 1135\n",
-      "Facts array: (10614, 3)\n",
-      "mean 5' UTR length: 217 +/- 200\n",
-      "mean    ORF length: 433 +/- 259\n",
-      "mean 3' UTR length: 307 +/- 211\n",
+      "mean longest ORF length: 433 +/- 259\n",
       "--  PC RNA lengths 1135 to 1628\n",
-      "Facts array: (10614, 3)\n",
-      "mean 5' UTR length: 217 +/- 222\n",
-      "mean    ORF length: 779 +/- 342\n",
-      "mean 3' UTR length: 394 +/- 290\n",
+      "mean longest ORF length: 779 +/- 342\n",
       "--  PC RNA lengths 1628 to 2092\n",
-      "Facts array: (10614, 3)\n",
-      "mean 5' UTR length: 256 +/- 262\n",
-      "mean    ORF length: 1056 +/- 430\n",
-      "mean 3' UTR length: 541 +/- 392\n",
+      "mean longest ORF length: 1056 +/- 430\n",
       "--  PC RNA lengths 2092 to 2665\n",
-      "Facts array: (10614, 3)\n",
-      "mean 5' UTR length: 303 +/- 328\n",
-      "mean    ORF length: 1292 +/- 562\n",
-      "mean 3' UTR length: 766 +/- 530\n",
+      "mean longest ORF length: 1292 +/- 562\n",
       "--  PC RNA lengths 2665 to 3509\n",
-      "Facts array: (10614, 3)\n",
-      "mean 5' UTR length: 337 +/- 397\n",
-      "mean    ORF length: 1636 +/- 754\n",
-      "mean 3' UTR length: 1084 +/- 730\n",
+      "mean longest ORF length: 1636 +/- 754\n",
       "--  PC RNA lengths 3510 to 4971\n",
-      "Facts array: (10614, 3)\n",
-      "mean 5' UTR length: 366 +/- 478\n",
-      "mean    ORF length: 2063 +/- 1036\n",
-      "mean 3' UTR length: 1717 +/- 1035\n",
+      "mean longest ORF length: 2063 +/- 1036\n",
       "--  PC RNA lengths 4971 to 82029\n",
-      "Facts array: (10614, 3)\n",
-      "mean 5' UTR length: 392 +/- 614\n",
-      "mean    ORF length: 3473 +/- 3002\n",
-      "mean 3' UTR length: 3528 +/- 2678\n",
+      "mean longest ORF length: 3473 +/- 3002\n",
       "--  PC RNA lengths 101518 to 109224\n",
-      "Facts array: (3, 3)\n",
-      "mean 5' UTR length: 224 +/- 0\n",
-      "mean    ORF length: 103767 +/- 3185\n",
-      "mean 3' UTR length: 1023 +/- 0\n"
+      "mean longest ORF length: 103767 +/- 3185\n"
      ]
     }
    ],
