Swap usage of LearnTools for SimTools

--- a/Notebooks/ORF_CNN_100.ipynb
+++ b/Notebooks/ORF_CNN_100.ipynb
@@ -67,7 +67,7 @@
     "    with open('RNA_describe.py', 'w') as f:\n",
     "        f.write(r.text)  \n",
     "    from RNA_describe import *\n",
-    "    r = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/LearnTools/RNA_prep.py')\n",
+    "    r = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/SimTools/RNA_prep.py')\n",
     "    with open('RNA_prep.py', 'w') as f:\n",
     "        f.write(r.text)  \n",
     "    from RNA_prep import *\n",
@@ -78,7 +78,7 @@
     "    sys.path.append(\"..\") # append parent dir in order to use sibling dirs\n",
     "    from SimTools.RNA_gen import *\n",
     "    from SimTools.RNA_describe import *\n",
-    "    from LearnTools.RNA_prep import *\n",
+    "    from SimTools.RNA_prep import *\n",
     "\n",
     "MODELPATH=\"BestModel\"  # saved on cloud instance and lost after logout\n",
     "#MODELPATH=DATAPATH+MODELPATH  # saved on Google Drive but requires login\n",
