--- a/Notebooks/GenCode_Explore_204.ipynb
+++ b/Notebooks/GenCode_Explore_204.ipynb
@@ -54,7 +54,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eDgS-z1tL6Q2",
-        "outputId": "c2c51b52-7a7a-490a-b69d-7a4062a3e7e3"
+        "outputId": "feed4181-2ec5-4550-9b6d-7ee9d0ff1baf"
       },
       "source": [
         "import time \n",
@@ -64,12 +64,12 @@
         "    print(s)\n",
         "show_time()"
       ],
-      "execution_count": 215,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-06-02 15:56:25 UTC\n"
+            "2021-06-02 17:21:11 UTC\n"
           ],
           "name": "stdout"
         }
@@ -82,7 +82,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tckHr4SuL6Q5",
-        "outputId": "c37e18dd-d6d6-467e-cc0b-18be64e774a2"
+        "outputId": "e7400467-e062-4861-ad6a-2ea34033a874"
       },
       "source": [
         "import numpy as np\n",
@@ -115,13 +115,13 @@
         "if not assert_imported_RNA_describe():\n",
         "    print(\"ERROR: Cannot use RNA_describe.\")"
       ],
-      "execution_count": 216,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "On Google CoLab, mount cloud-local file, get our code from GitHub.\n",
-            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
+            "Mounted at /content/drive/\n"
           ],
           "name": "stdout"
         }
@@ -136,7 +136,7 @@
         "PC_FILENAME='gencode.v38.pc_transcripts.fa.gz'\n",
         "NC_FILENAME='gencode.v38.lncRNA_transcripts.fa.gz'"
       ],
-      "execution_count": 217,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -189,7 +189,7 @@
         "    df=pd.concat((df1,df2,df3,df4),axis=1)\n",
         "    return df"
       ],
-      "execution_count": 218,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -213,7 +213,7 @@
         "        print(\"mean longest ORF length:\",int(mean_max_orf),\"+/-\",int(std_max_orf))\n",
         "    return mean_max_orf"
       ],
-      "execution_count": 219,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FwwunxFxL6Q-",
-        "outputId": "061baa38-483c-411c-ff4b-6f923fda0e1c"
+        "outputId": "f7e35d6c-7095-4729-8717-58e4c06e7920"
       },
       "source": [
         "PC_FULLPATH=DATAPATH+PC_FILENAME\n",
@@ -248,16 +248,16 @@
         "print(\"NC seqs loaded:\",len(ncdf))\n",
         "show_time()"
       ],
-      "execution_count": 220,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-06-02 15:56:25 UTC\n",
+            "2021-06-02 17:23:14 UTC\n",
             "PC seqs loaded: 106143\n",
-            "2021-06-02 15:56:29 UTC\n",
+            "2021-06-02 17:23:19 UTC\n",
             "NC seqs loaded: 48752\n",
-            "2021-06-02 15:56:30 UTC\n"
+            "2021-06-02 17:23:21 UTC\n"
           ],
           "name": "stdout"
         }
@@ -270,7 +270,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7iW7zf4pL6Q_",
-        "outputId": "85eecf4b-9b4c-46bf-fabf-9e9a0d01f0d3"
+        "outputId": "791fa9e5-b5fd-412b-c39f-ce37504fed29"
       },
       "source": [
         "print(\"Sorting PC...\")\n",
@@ -278,7 +278,7 @@
         "print(\"Sorting NC...\")\n",
         "ncdf.sort_values('seqlen', ascending=True, inplace=True)"
       ],
-      "execution_count": 221,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +322,7 @@
         "subset = pcdf.loc[mask]\n",
         "subset_list = subset['sequence'].tolist()"
       ],
-      "execution_count": 222,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -334,7 +334,7 @@
         "def subset_list_by_len_bounds(input_list, min_len, max_len):\n",
         "  return list(filter(lambda x: len(x) > min_len and len(x) < max_len, input_list))"
       ],
-      "execution_count": 223,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -348,7 +348,7 @@
         "\n",
         "#TODO: optimize the application of length thresholds and make use of numpy lists\n",
         "#TODO: optimize in general\n",
-        "num_bins = 6\n",
+        "bins = [(200, 400), (400, 800), (800, 1600), (1600, 3200), (3200, 6400), (6400, 12800)]\n",
         "\n",
         "x_axis_labels = []\n",
         "\n",
@@ -360,11 +360,9 @@
         "nc_max_cnt_data = []\n",
         "nc_contain_data = []\n",
         "\n",
-        "for bin_num in range(1, num_bins + 1):\n",
-        "  #define min and max sequence ranges (200, 400, 800, 1600, etc.)\n",
-        "  #TODO: hardcode these length thresholds?\n",
-        "  min_seq_length = 2**bin_num * 100\n",
-        "  max_seq_length = 2**(bin_num + 1) * 100\n",
+        "for bin_num in range(0, len(bins)):\n",
+        "  min_seq_length = bins[bin_num][0]\n",
+        "  max_seq_length = bins[bin_num][1]\n",
         "\n",
         "  #subset the protein-coding sequences by min and max sequence length bounds\n",
         "  pc_sequences = pcdf['sequence'].tolist()\n",
@@ -385,9 +383,9 @@
         "    max_cnt = oc.count_maximal_orfs()\n",
         "    contain = oc.count_contained_orfs()\n",
         "\n",
-        "    pc_max_len_data[bin_num - 1].append(max_len)\n",
-        "    pc_max_cnt_data[bin_num - 1].append(max_cnt)\n",
-        "    pc_contain_data[bin_num - 1].append(contain)\n",
+        "    pc_max_len_data[bin_num].append(max_len)\n",
+        "    pc_max_cnt_data[bin_num].append(max_cnt)\n",
+        "    pc_contain_data[bin_num].append(contain)\n",
         "\n",
         "  #subset the non-coding sequences by and min and max sequence length bounds\n",
         "  nc_sequences = ncdf['sequence'].tolist()\n",
@@ -408,31 +406,30 @@
         "    max_cnt = oc.count_maximal_orfs()\n",
         "    contain = oc.count_contained_orfs()\n",
         "\n",
-        "    nc_max_len_data[bin_num - 1].append(max_len)\n",
-        "    nc_max_cnt_data[bin_num - 1].append(max_cnt)\n",
-        "    nc_contain_data[bin_num - 1].append(contain)\n",
+        "    nc_max_len_data[bin_num].append(max_len)\n",
+        "    nc_max_cnt_data[bin_num].append(max_cnt)\n",
+        "    nc_contain_data[bin_num].append(contain)\n",
         "\n",
         "#Merge pc and nc data for plotting\n",
-        "#TODO: Do during data collection for more efficiency\n",
         "max_len_data = []\n",
         "max_cnt_data = []\n",
         "contain_data = []\n",
-        "for i in range(1, num_bins + 1):\n",
-        "  max_len_data.append(pc_max_len_data[i-1])\n",
-        "  max_len_data.append(nc_max_len_data[i-1])\n",
-        "  max_cnt_data.append(pc_max_len_data[i-1])\n",
-        "  max_cnt_data.append(nc_max_len_data[i-1])\n",
-        "  contain_data.append(pc_max_len_data[i-1])\n",
-        "  contain_data.append(nc_max_len_data[i-1])\n",
+        "for i in range(0, len(bins)):\n",
+        "  max_len_data.append(pc_max_len_data[i])\n",
+        "  max_len_data.append(nc_max_len_data[i])\n",
+        "  max_cnt_data.append(pc_max_len_data[i])\n",
+        "  max_cnt_data.append(nc_max_len_data[i])\n",
+        "  contain_data.append(pc_max_len_data[i])\n",
+        "  contain_data.append(nc_max_len_data[i])\n",
         "\n",
         "  #Recalculate bounds for x-axis labels. TODO: Don't do this.\n",
-        "  min_seq_length = 2**i * 100\n",
-        "  max_seq_length = 2**(i + 1) * 100\n",
+        "  min_seq_length = bins[i][0]\n",
+        "  max_seq_length = bins[i][1]\n",
         "  #just for the box plots\n",
         "  x_axis_labels.append(str(min_seq_length) + \"-\" + str(max_seq_length) + \" (mRNA)\")\n",
         "  x_axis_labels.append(str(min_seq_length) + \"-\" + str(max_seq_length) + \" (lncRNA)\")"
       ],
-      "execution_count": 225,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -454,7 +451,7 @@
           "height": 1000
         },
         "id": "8GzgZJXqTPz1",
-        "outputId": "cc17441d-4d1f-4e14-e8e6-df246b2ad33d"
+        "outputId": "bef935e3-7e01-4a71-b6d5-d0c69f8a1ee9"
       },
       "source": [
         "fig1, ax1 = plt.subplots()\n",
@@ -481,7 +478,7 @@
         "ax1.set_xticklabels(x_axis_labels, rotation = 45, ha = \"center\")\n",
         "ax1.boxplot(contain_data, showfliers=False)"
       ],
-      "execution_count": 226,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -499,86 +496,86 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'boxes': [<matplotlib.lines.Line2D at 0x7fcb0d729690>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0ec49e90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0e86d510>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb11222a10>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0ecf6050>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb1115b110>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb12008990>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0c87f3d0>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0e070190>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0fbfcf90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0ea52b50>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0c89cd90>],\n",
-              " 'caps': [<matplotlib.lines.Line2D at 0x7fcb112963d0>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb11296750>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb119a9b90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb119a9950>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb109bb210>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0f4b9d50>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0d593dd0>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0d593f90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0ea54d90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0fbc3ad0>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb109f1350>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb109f1d90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0f468190>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0f4681d0>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0fc48cd0>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0fc48350>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0d0dc850>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0d0dce50>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0ea5bdd0>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0ea5b650>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb12f49090>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb12f49690>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0c8aed90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0c8aeb90>],\n",
+              "{'boxes': [<matplotlib.lines.Line2D at 0x7fa97ae4e650>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae52e90>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae64e50>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae75ed0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae05f10>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae14f10>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae24f10>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae37f10>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adc6ed0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97add7e50>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ade7dd0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adf7dd0>],\n",
+              " 'caps': [<matplotlib.lines.Line2D at 0x7fa97ae453d0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae52250>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae5de50>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae643d0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae6ee90>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae75450>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae7ced0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae05450>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae0ef10>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae14450>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae1cf10>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae24490>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae2df10>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae37490>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adbef10>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adc6490>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adcfe90>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97add7410>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ade0dd0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ade7350>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adefdd0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adf7350>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ad81dd0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ad88350>],\n",
               " 'fliers': [],\n",
               " 'means': [],\n",
-              " 'medians': [<matplotlib.lines.Line2D at 0x7fcb0ec49ed0>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb103510d0>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb11675b10>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0d5934d0>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb119aff90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb109f1190>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0c87ff90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0e0c2290>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0d0dc710>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0ea52150>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb12f49750>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0c8ae390>],\n",
-              " 'whiskers': [<matplotlib.lines.Line2D at 0x7fcb0fcb1190>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb11296790>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0ec490d0>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb119a92d0>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb109bb810>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb109bbe50>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb11222610>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb11222490>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0ea54850>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0ea54e90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0fc6ba90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb12bdd910>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb12008150>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0eb45e90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0c87f890>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0fc48190>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb10378250>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0e8f8810>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0d7e9110>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0d591a90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0ea52c90>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb1036c490>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0c89c490>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fcb0c89cf90>]}"
+              " 'medians': [<matplotlib.lines.Line2D at 0x7fa97ae52950>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae64910>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae75990>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae05990>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae14990>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae249d0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae379d0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adc69d0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97add7950>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ade7890>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adf7890>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ad88890>],\n",
+              " 'whiskers': [<matplotlib.lines.Line2D at 0x7fa97ae4eb50>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae520d0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae5d410>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae5d950>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae6e3d0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae6e950>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae7c450>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae7c990>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae0e4d0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae0e9d0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae1c490>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae1c9d0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae2d490>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ae2d9d0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adbe490>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adbe9d0>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adcf410>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adcf950>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ade0350>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ade0890>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adef350>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97adef890>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ad81350>,\n",
+              "  <matplotlib.lines.Line2D at 0x7fa97ad81890>]}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 226
+          "execution_count": 11
         },
         {
           "output_type": "display_data",
@@ -641,7 +638,7 @@
       "source": [
         ""
       ],
-      "execution_count": 214,
+      "execution_count": 11,
       "outputs": []
     }
   ]
