--- a/Notebooks/GenCode_Explore_205.ipynb
+++ b/Notebooks/GenCode_Explore_205.ipynb
@@ -393,7 +393,7 @@
         "oc = ORF_counter()\n",
         "\n",
         "for bin_num in range(0, len(bins)):\n",
-        "\n",
+        "  #Gather protein-coding sequence data\n",
         "  pc_max_len_data.append([])\n",
         "  pc_max_cnt_data.append([])\n",
         "  pc_contain_data.append([])\n",
@@ -403,6 +403,7 @@
         "    pc_max_cnt_data[bin_num].append(oc.count_maximal_orfs())\n",
         "    pc_contain_data[bin_num].append(oc.count_contained_orfs())\n",
         "\n",
+        "  #Gather non-coding sequence data\n",
         "  nc_max_len_data.append([])\n",
         "  nc_max_cnt_data.append([])\n",
         "  nc_contain_data.append([])\n",
@@ -490,6 +491,7 @@
         "  mean_nc_max_cnt_data.append(mean(nc_max_cnt_data[i]))\n",
         "  mean_nc_contain_data.append(mean(nc_contain_data[i]))\n",
         "\n",
+        "#Combine them into a (6,6) shaped data set for the heatmap\n",
         "hm_data = []\n",
         "hm_data.append(mean_pc_max_len_data)\n",
         "hm_data.append(mean_pc_max_cnt_data)\n",
@@ -524,7 +526,6 @@
       },
       "source": [
         "#Heat map\n",
-        "#TODO: label axis \n",
         "plt.imshow(hm_data, cmap='hot', interpolation='nearest')\n",
         "plt.xlabel('Sequence Length Ranges')\n",
         "plt.xticks(np.arange(6), [\"200-400\", \"400-800\", \"800-1600\", \"1600-3200\", \"3200-6400\", \"6400-12800\"], rotation=45)\n",
