Add more options for boxplots.

--- a/Notebooks/GenCode_Explore_205.ipynb
+++ b/Notebooks/GenCode_Explore_205.ipynb
@@ -490,7 +490,7 @@
         "id": "rc7P-LjgiCLB"
       },
       "source": [
-        "def box_plot_compare(data_a, data_b, title, x_label, y_label, x_axis_labels, fliers):\n",
+        "def box_plot_compare(data_a, data_b, title, x_label, y_label, x_axis_labels, fliers, y_scale, y_base):\n",
         "  a_pos = []\n",
         "  b_pos = []\n",
         "  x_ticks = []\n",
@@ -514,7 +514,7 @@
         "    box.set(color='blue', linewidth=1)\n",
         "    box.set(facecolor='white')\n",
         "\n",
-        "  plt.yscale('log', basey=2)\n",
+        "  plt.yscale(y_scale, basey=y_base)\n",
         "  plt.xticks(x_ticks, labels=x_axis_labels, rotation=45, ha='right')\n",
         "  plt.xlabel(x_label)\n",
         "  plt.ylabel(y_label)\n",
@@ -522,7 +522,7 @@
         "  \n",
         "  plt.show()"
       ],
-      "execution_count": 99,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -534,9 +534,11 @@
         "#___Options___\n",
         "#Box plots\n",
         "show_outliers=True\n",
+        "y_scale = 'log'\n",
+        "y_base = 2\n",
         "#Heatmap"
       ],
-      "execution_count": null,
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -547,9 +549,10 @@
           "height": 1000
         },
         "id": "8GzgZJXqTPz1",
-        "outputId": "e4b60f6b-c9c9-4adb-bd5f-feb39949de35"
+        "outputId": "1f27d24d-2dc3-4b21-be7e-7787a8423466"
       },
       "source": [
+        "#___Run the plots___\n",
         "#Heatmap\n",
         "plt.imshow(hm_data, cmap='hot', interpolation='nearest')\n",
         "plt.xlabel('Sequence Length Ranges')\n",
@@ -558,11 +561,11 @@
         "plt.show()\n",
         "\n",
         "#Box plots\n",
-        "box_plot_compare(pc_max_len_data, nc_max_len_data, \"Length of Longest ORF in RNA Sequences\", \"Sequence Length Ranges\", \"ORF Length\", x_axis_labels, show_outliers)\n",
-        "box_plot_compare(pc_max_cnt_data, nc_max_cnt_data, \"Number of Non-contained ORFs in RNA Sequences\", \"Sequence Length Ranges\", \"Number of Non-contained ORFs\", x_axis_labels, show_outliers)\n",
-        "box_plot_compare(pc_contain_data, nc_contain_data, \"Number of Contained ORFs in RNA Sequences\", \"Sequence Length Ranges\", \"Number of Contained ORFs\", x_axis_labels, show_outliers)"
+        "box_plot_compare(pc_max_len_data, nc_max_len_data, \"Length of Longest ORF in RNA Sequences\", \"Sequence Length Ranges\", \"ORF Length\", x_axis_labels, show_outliers, y_scale, y_base)\n",
+        "box_plot_compare(pc_max_cnt_data, nc_max_cnt_data, \"Number of Non-contained ORFs in RNA Sequences\", \"Sequence Length Ranges\", \"Number of Non-contained ORFs\", x_axis_labels, show_outliers, y_scale, y_base)\n",
+        "box_plot_compare(pc_contain_data, nc_contain_data, \"Number of Contained ORFs in RNA Sequences\", \"Sequence Length Ranges\", \"Number of Contained ORFs\", x_axis_labels, show_outliers, y_scale, y_base)"
       ],
-      "execution_count": 100,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "display_data",
