Refactor boxplot x-axis label generation.

--- a/Notebooks/GenCode_Explore_205.ipynb
+++ b/Notebooks/GenCode_Explore_205.ipynb
@@ -356,12 +356,7 @@
         "  binned_pc_sequences.append([])\n",
         "  binned_nc_sequences.append([])\n",
         "  binned_pc_sequences[i] = subset_list_by_len_bounds(pcdf['sequence'].tolist(), bin[0], bin[1])\n",
-        "  binned_nc_sequences[i] = subset_list_by_len_bounds(ncdf['sequence'].tolist(), bin[0], bin[1])\n",
-        "\n",
-        "  #Set x-axis labels for box plots\n",
-        "  #TODO: move to 'Plot the data'\n",
-        "  x_axis_labels.append(str(bin[0]) + \"-\" + str(bin[1]) + \" (mRNA)\")\n",
-        "  x_axis_labels.append(str(bin[0]) + \"-\" + str(bin[1]) + \" (lncRNA)\")"
+        "  binned_nc_sequences[i] = subset_list_by_len_bounds(ncdf['sequence'].tolist(), bin[0], bin[1])"
       ],
       "execution_count": 91,
       "outputs": []
@@ -535,7 +530,7 @@
         "#Box plots\n",
         "show_outliers=True\n",
         "y_scale = 'log'\n",
-        "y_base = 2\n",
+        "y_base =\n",
         "#Heatmap"
       ],
       "execution_count": 102,
@@ -553,6 +548,7 @@
       },
       "source": [
         "#___Run the plots___\n",
+        "\n",
         "#Heatmap\n",
         "plt.imshow(hm_data, cmap='hot', interpolation='nearest')\n",
         "plt.xlabel('Sequence Length Ranges')\n",
@@ -561,6 +557,11 @@
         "plt.show()\n",
         "\n",
         "#Box plots\n",
+        "#Generate x-axis labels\n",
+        "for i in range(0, len(bins)):\n",
+        "  x_axis_labels.append(str(bin[0]) + \"-\" + str(bin[1]) + \" (mRNA)\")\n",
+        "  x_axis_labels.append(str(bin[0]) + \"-\" + str(bin[1]) + \" (lncRNA)\")\n",
+        "\n",
         "box_plot_compare(pc_max_len_data, nc_max_len_data, \"Length of Longest ORF in RNA Sequences\", \"Sequence Length Ranges\", \"ORF Length\", x_axis_labels, show_outliers, y_scale, y_base)\n",
         "box_plot_compare(pc_max_cnt_data, nc_max_cnt_data, \"Number of Non-contained ORFs in RNA Sequences\", \"Sequence Length Ranges\", \"Number of Non-contained ORFs\", x_axis_labels, show_outliers, y_scale, y_base)\n",
         "box_plot_compare(pc_contain_data, nc_contain_data, \"Number of Contained ORFs in RNA Sequences\", \"Sequence Length Ranges\", \"Number of Contained ORFs\", x_axis_labels, show_outliers, y_scale, y_base)"
